shifting the attribute window down a bit to avoid conflicts with the print button

--- a/media/marco-proto/assets/css/style.css
+++ b/media/marco-proto/assets/css/style.css
@@ -27,7 +27,7 @@
 #attribute-data {
   position: absolute;
   /*top: 25%;*/
-  top: 150px;
+  top: 180px;
   right: 0;
   z-index: 950; 
   width: 250px;
